# CustomSkills

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
data/SKSE/CustomConsole/: CustomSkills.yaml
docs/: CustomSkill.schema.json
docs/schema/: CustomSkill.json  defs.json  skill.json
include/CustomSkills/: Events.h  Interfaces.h  Interfaces.inl  Stubs.h
scripts/: CustomSkills.psc  CustomSkills_ActiveMagicEffectExt.psc  CustomSkills_AliasExt.psc  CustomSkills_FormExt.psc  TESV_Papyrus_Flags.flg
src/CustomSkills/: CImageController.h  CustomSkillBookReadRegSet.cpp  CustomSkillBookReadRegSet.h  CustomSkillIncreaseRegSet.cpp  CustomSkillIncreaseRegSet.h  CustomSkillsInterface.cpp  CustomSkillsInterface.h  CustomSkillsManager.cpp  CustomSkillsManager.h  EventSources.h  Game.cpp  Game.h  Serialization.cpp  Serialization.h  Settings.cpp  Settings.h  Skill.cpp  Skill.h  SkillIncreaseEventSource.cpp  SkillIncreaseEventSource.h  TreeNode.cpp  TreeNode.h
src/CustomSkills/Hooks/: ActorValue.cpp  ActorValue.h  BeastSkillInfo.cpp  BeastSkillInfo.h  Constellation.cpp  Constellation.h  Crafting.cpp  Crafting.h  Legendary.cpp  Legendary.h  MenuSetup.cpp  MenuSetup.h  Navigation.cpp  Navigation.h  Scaleform.cpp  Scaleform.h  SkillBooks.cpp  SkillBooks.h  SkillInfo.cpp  SkillInfo.h  SkillProgress.cpp  SkillProgress.h  SkillUse.cpp  SkillUse.h  Training.cpp  Training.h  Update.cpp  Update.h
src/PCH/: PCH.h
src/Papyrus/: CustomSkills.cpp  CustomSkills.h  Events.cpp  Events.h
src/RE/: Offset.h
src/SKSEPlugin/: SKSEPlugin.cpp
